--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -884,7 +884,14 @@ ul.socials-top li:hover i{
 .process-model li:first-child::after{
     content: '';
     display: none;
-}
+} 
+.progress{
+  height: 0.7rem !important;
+ margin-bottom: 1rem;
+ }
+.progress-bar{
+   background: #fd1c4c !important;
+ }
 .process-model li.visited::after {
     background: #08aded;
     transition: all 0.3s;
@@ -1058,10 +1065,10 @@ ul.socials-top li:hover i{
     color: #fd1c4c;
 }
 .campaign-box h3{
-    margin-bottom: 15px;
-    height: 20px;
+/*    margin-bottom: 15px;*/
+    height: 50px;
     overflow: hidden;
-    font-size: 20px;
+    font-size: 18px;
 
 }
 .campaign-box h3 a{
@@ -1144,7 +1151,9 @@ ul.socials-top li:hover i{
     padding-top: 90px;
 }
 .project-love{
-    padding-top: 60px;
+   padding-top: 60px;
+    background: #f5f6f6;
+    padding-bottom: 60px;
 }
 .project-love .bx-wrapper{
     box-shadow: none;
@@ -1734,10 +1743,24 @@ ul.menu-category li.active:after{
   max-height: 60px;
   overflow: hidden;
 }
-.post-info,
-.product-info{
-  background-color: #f5f6f6;
-  padding: 27px 25px;
+.post-info, .product-info {
+    background-color: #f5f6f6;
+    padding: 27px 25px;
+    width: 100%;
+    /* margin: 0; */
+    /* padding: 0; */
+    margin-left: -1px!important;
+}
+
+.filler{
+    width: 100%;
+    display: flex; 
+}
+.filler-sub{
+   padding-left: 10px;
+}
+.filler-sub input{
+   border-radius: 17px;
 }
 .post-title,
 .product-title{
@@ -1938,6 +1961,13 @@ ul.menu-category li.active:after{
   font-weight: 500;
   color: #555;
 }
+ .progress{
+  height: 0.7rem !important;
+ margin-bottom: 1rem;
+ }
+.progress-bar{
+   background-color: #fd1c4c;
+     }
 .entry-footer .tags-links a:hover{
   color: #fd1c4c;
 }
@@ -3402,14 +3432,15 @@ form .create-account input[type="checkbox"]{
 -------------------------------------------------------------------*/
 .how-it-work{
   padding: 100px 0;
-  background: linear-gradient(120deg, rgb(253, 28, 76) 70%, rgba(253, 28, 76, 0.53) 0%), url(../celebrity-fontend/images/how-it-work.jpg);
+  background: linear-gradient(120deg, rgb(253, 28, 76) 70%, rgba(253, 28, 76, 0.53) 0%), url(http://localhost/git_project/WebIdeasole/celebritycalling/images/how-it-work.jpg);
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   /* background-color: #f5f6f6; */
-  margin-top: 20px;
+ /* margin-top: 20px;*/
 }
+
 .item-work .item-icon{
   float: left;
   height: 64px;
@@ -4973,8 +5004,8 @@ margin-top: 80px;
     background-color: #fd1c4c;
 }
 .product-like{
-    display: flex;
-    padding-top: 10px;
+/*    display: flex;*/
+/*    padding-top: 10px;*/
 
 }
 /* .follow{
@@ -5107,3 +5138,62 @@ margin-top: 80px;
 .jssort111 .ti {position:absolute;bottom:0px;left:0px;width:100%;height:28px;line-height:28px;text-align:center;font-size:12px;color:#fff;background-color:rgba(0,0,0,.3)}
 .jssort111 .pav .ti, .jssort111 .pdn .ti, .jssort111 .p:hover.pdn .ti{color:#000;background-color:rgba(255,255,255,.6);}
 
+/*add css 09th jan 2019*/
+
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #fd86a0;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
+
+form.example button:hover {
+  background: #0b7dda;
+}
+
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.partners .partners-slider p {
+    padding-top: 5px;
+    color: #fd86a0;
+    padding: 20px;
+    display: flex;
+}
+
+.new-src{
+    padding: 12px;
+    background: #ef4391;
+    border: 0;
+    color: #fff;
+}
+
+.pads{
+    padding-left: 18px;
+}
+.acc-drop{
+    padding: 0;
+    margin: 0;
+    line-height: 2;
+    /* padding: 10px; */
+    text-align: center;
+}
+.filter-celeb{
+    margin-top: 40px;
+}
